--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!--=============== REMIXICONS ===============-->
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         
-        <!--=============== SWIPER CSS ===============-->
+  
         <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
 
         <!--=============== CSS ===============-->
@@ -460,7 +460,15 @@
             </div>
         </footer>
 
-      
+         <!--========== SCROLL UP ==========-->
+        <a href="#" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-line scrollup__icon"></i>
+        </a>        
+        <!--=============== SWIPER JS ===============-->
+        <script src="./assets/js/swiper-bundle.min.js"></script>
+
+        <!--=============== MAIN JS ===============-->
+        <script src="./assets/js/main.js"></script>
     </body>
 </html>
 
